# wenhao-billing

./: .gitignore  AGENTS.md  CLAUDE.md  SQLSchema.sql  docker-compose.yml  prd.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_coa.py  0003_vendors_items.py  0004_user_profile_fields.py  0005_active_flag_customers_coa.py  0006_ledger_base_currency_and_fx.py  0007_customer_contact_fields.py  0008_fx_gain_loss_accounts.py  0009_invoice_line_items.py  0010_business_profile.py  0011_bp_default_notes.py  0012_customer_extended_fields.py  0013_bills_ap.py  0014_projects.py  0015_quotations.py  0016_items_sell_buy.py  0017_hosting_subscriptions.py  0018_hosting_on_invoice.py  0019_hosting_on_item.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/db/: session.py
backend/app/models/: __init__.py  bill.py  bill_line_item.py  business_profile.py  cloudflare_target.py  coa.py  customer.py  fx.py  hosting_subscription.py  invoice.py  invoice_line_item.py  item.py  journal.py  payment.py  project.py  quotation.py  quotation_line_item.py  recon_log.py  user.py  vendor.py
backend/app/schemas/: auth.py  bill.py  business_profile.py  customer.py  fx.py  hosting_subscription.py  invoice.py  item.py  payment.py  project.py  quotation.py  reports.py  user.py  vendor.py
backend/app/services/: billing_ap.py  cloudflare.py  email.py  fx.py  (+11 more)
backend/scripts/: seed_admin.py  seed_dummy.py  seed_hosting.py  seed_master_data.py
backend/tests/: conftest.py
(+121 files in other folders)
