[project]
name = "wenhao-billing-backend"
version = "0.1.0"
description = "Single-tenant agency accounting system — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "passlib>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-postgresql>=6.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
